Update 나만의 작은 식물.md

--- a/나만의 작은 식물.md
+++ b/나만의 작은 식물.md
@@ -41,3 +41,38 @@
 - 물 주기 리마인더 이메일/푸시 기능
 - 다육/열매/관엽 등 분류별 맞춤 가이드
 
+## 프롬프트
+~~~
+Create a simple web app using HTML, CSS, and JavaScript with Flask backend that allows users to input the name of a plant they are growing. When they submit the plant name, the app will use OpenAI's GPT-3.5 API to generate a concise plant care guide, including watering frequency, sunlight requirements, soil type, and fertilizer schedule.
+
+Requirements:
+- Input field for the plant name
+- "Generate Guide" button
+- Display area for the generated plant care guide
+- Clean and cute UI with green garden-like theme (use CSS)
+- Flask backend in Python to handle the API request to OpenAI
+- Store recent plant searches in session memory
+- Deployable on Replit (all-in-one code)
+
+Optional:
+- Provide watering/fertilizing calendar template (weekly schedule)
+- Add loading spinner while GPT is generating response
+
+HTML, CSS, JavaScript, Flask를 이용해 간단한 웹앱을 만들어주세요.
+
+사용자가 키우고 있는 식물 이름을 입력하면, 해당 식물의 키우는 방법(물 주는 주기, 햇빛 양, 흙 종류, 비료 사용법 등)을 요약해서 보여주는 사이트를 만들고 싶습니다.  
+입력된 식물 이름을 Flask 백엔드에서 OpenAI GPT API로 보내고, 응답 내용을 웹에 출력해주세요.
+
+[요구 사항]
+- 식물 이름을 입력하는 입력창
+- "관리법 생성" 버튼
+- 관리법 요약 결과를 출력하는 영역
+- 초록색 테마의 귀엽고 감성적인 UI (CSS로 꾸미기)
+- 최근 입력한 식물 이름을 세션에 저장
+- Replit에서 바로 실행 가능한 코드
+
+[선택 사항]
+- GPT 응답을 기반으로 일주일 단위 관리 일정표 생성
+- 응답 생성 중에는 로딩 애니메이션 추가
+
+~~~
