--- a/학습도우미.md
+++ b/학습도우미.md
@@ -37,3 +37,40 @@
 - 제휴 강의 추천 (커미션 기반)
 
 ## 🧱 샘플 프롬프트
+~~~
+Create a web app using HTML, CSS (Tailwind), and JavaScript with Flask backend that allows users to enter a learning topic and preferred time duration (e.g., 1 week, 1 month). The app should send this information to OpenAI GPT-3.5 API and receive a custom learning curriculum, breaking it down into daily or weekly plans.
+
+Requirements:
+- Input fields: Topic name, Learning duration (dropdown), Daily study time (optional)
+- "Generate Curriculum" button
+- Display area for the generated curriculum in a checklist format
+- Tailwind CSS for clean and minimal UI
+- Flask backend that connects to OpenAI GPT API
+- Store curriculum in local storage so it remains on reload
+- Deployable in Replit
+
+Bonus:
+- Export to PDF button
+- Mark completed days and show progress bar
+- GPT prompt should ensure daily goals are specific and realistic
+
+
+HTML, Tailwind CSS, JavaScript, Flask를 이용해 GPT 기반 학습 커리큘럼 생성 웹앱을 만들어주세요.
+
+사용자가 배우고 싶은 주제와 기간(예: 1주, 1개월), 하루 공부 시간 등을 입력하면 GPT를 이용해 구체적인 학습 계획을 생성해줍니다. 생성된 커리큘럼은 일일 체크리스트 형식으로 보여주세요.
+
+[기능 요구 사항]
+- 입력: 학습 주제, 기간(드롭다운), 하루 공부 시간 (선택)
+- "커리큘럼 생성" 버튼
+- 결과: 날짜별 학습 계획 출력 (리스트 or 카드 형식)
+- 사용자가 완료한 항목을 체크할 수 있는 UI
+- 로컬스토리지에 데이터 저장
+- Tailwind CSS로 깔끔한 UI 구현
+- Flask 백엔드에서 GPT API 호출
+
+[선택 기능]
+- PDF로 내보내기 버튼
+- 완료한 학습 수에 따라 진행률 표시 (Progress bar)
+- GPT에게 "하루 학습량이 너무 많지 않도록" 프롬프트에 반영
+
+~~~
