Update 나만의 작은 식물.md

--- a/나만의 작은 식물.md
+++ b/나만의 작은 식물.md
@@ -2,6 +2,7 @@
 
 ## 🎯 프로젝트 개요
 사용자가 키우고 있는 식물 이름이나 종류를 입력하면, 해당 식물의 관리법(햇빛, 물주기, 분갈이 등)을 요약해 제공하고, 관리 스케줄(물주기/비료 등)을 자동으로 생성해주는 웹 서비스입니다.
+그리고 지금 식물을 이루는 환경이나 몇주차인지를 설정할 수 있고 만약 식물에 문제가 있을 시에 사진을 찍고 올리면 뭐가 문제일지 분석해주는 기능과 키울 식물을 입력하면 보통 다 자랄때 까지 얼마가 걸리는지를 분석하고 하루하루, 혹은 주차별로 지금 이렇게 해야한다고 실시간으로 알려주는 기능 필요.
 
 ## 💡 주요 기능
 - 🌱 식물 이름 또는 키워드 입력 → 자동 관리 가이드 요약
