--- a/글쓰기 훈련소.md
+++ b/글쓰기 훈련소.md
@@ -33,6 +33,7 @@
 | 연습 방식 | 설명 |
 |-----------|------|
 | 문제 풀이 | 매일 다른 GPT 기반 주제로 글쓰기 |
+| 테마별 글스기 | 시대나 세계관을 정해놓고 그 테마에 맞춰 글을 쓰기 |
 | 필사 연습 | 명문장을 따라 쓰며 문장 감각 훈련 |
 | 재작성 훈련 | 문장 요약/확장/스타일 변환 |
 | 빈칸 채우기 | 부분 생략 문장을 채워보며 문맥 파악 연습 |
